syntax = "proto3";

package shard;

service Shard {
  rpc ShardCount(ShardCountRequest) returns (ShardCountResponse);
  rpc ShardInfo(ShardInfoRequest) returns (ShardInfoResponse);
}

message ShardCountRequest {}

message ShardCountResponse {
  int32 count = 1;
  repeated int32 shard_ids = 2;
}

message ShardInfoRequest {
  int32 shard_id = 1;
}

message ShardInfoResponse {
  int32 shard_id = 1;
  string latency = 2;
  string stage = 3;
}
